force-app/main/default/objects/Event_Members__c/Event_Members__c.object-meta.xml
<CustomObject>
    <label>Event Attendee</label>
    <nameField>
        <displayFormat>EA-{000000}</displayFormat>
        <label>Event Attendee ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>