force-app/main/default/objects/Event_Members__c/fields/Assistant_1__c.field-meta.xml
<CustomField>
    <fullName>Assistant_1__c</fullName>
    <formula>Contact__r.Assistant_1__r.FirstName &amp; &quot; &quot; &amp;  Contact__r.Assistant_1__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assistant 1</label>
    <type>Text</type>
</CustomField>