force-app/main/default/objects/Event_Members__c/fields/Assistant_1_Email__c.field-meta.xml
<CustomField>
    <fullName>Assistant_1_Email__c</fullName>
    <formula>Contact__r.Assistant_1__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assistant 1 Email</label>
    <type>Text</type>
</CustomField>