force-app/main/default/objects/Event_Members__c/fields/Assistant_1_Phone__c.field-meta.xml
<CustomField>
    <fullName>Assistant_1_Phone__c</fullName>
    <formula>Contact__r.Assistant_1__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assistant 1 Phone</label>
    <type>Text</type>
</CustomField>