force-app/main/default/objects/Event_Members__c/fields/Assistant_2__c.field-meta.xml
<CustomField>
    <fullName>Assistant_2__c</fullName>
    <formula>Contact__r.Assistant_2__r.FirstName &amp; &quot; &quot; &amp;  Contact__r.Assistant_2__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assistant 2</label>
    <type>Text</type>
</CustomField>