force-app/main/default/objects/Event_Members__c/fields/Associated_Opportunity_for_RevRec__c.field-meta.xml
<CustomField>
    <fullName>Associated_Opportunity_for_RevRec__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Opportunity for RevRec</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Event Attendees</relationshipLabel>
    <relationshipName>Event_Attendees1</relationshipName>
    <type>Lookup</type>
</CustomField>