force-app/main/default/objects/Event_Members__c/fields/Attended_All_3__c.field-meta.xml
<CustomField>
    <fullName>Attended_All_3__c</fullName>
    <formula>IF( (ISPICKVAL( Day_1_Role__c, &quot;Member&quot;) || ISPICKVAL( Day_1_Role__c, &quot;Prospect&quot;) || ISPICKVAL ( Day_1_Role__c, &quot;Guest&quot;) || ISPICKVAL ( Day_1_Role__c, &quot;Speaker&quot;)) &amp;&amp; (ISPICKVAL( Day_2_Role__c, &quot;Member&quot;) || ISPICKVAL( Day_2_Role__c, &quot;Prospect&quot;) || ISPICKVAL ( Day_2_Role__c, &quot;Guest&quot;) || ISPICKVAL ( Day_2_Role__c, &quot;Speaker&quot;)) &amp;&amp; (ISPICKVAL( Dinner_Role__c , &quot;Member&quot;) || ISPICKVAL( Dinner_Role__c, &quot;Prospect&quot;) || ISPICKVAL ( Dinner_Role__c, &quot;Guest&quot;) || ISPICKVAL ( Dinner_Role__c, &quot;Speaker&quot;)), &quot;Yes&quot;, &quot;No&quot;)</formula>
    <label>Attended All 3?</label>
    <type>Text</type>
</CustomField>