force-app/main/default/objects/Event_Members__c/fields/Attended_NGL_Revenue_Recognition__c.field-meta.xml
<CustomField>
    <fullName>Attended_NGL_Revenue_Recognition__c</fullName>
    <formula>IF( (ISPICKVAL( Day_1_Role__c, &quot;Member&quot;) || ISPICKVAL( Day_1_Role__c, &quot;Invited Member&quot;) || ISPICKVAL( Day_2_Role__c, &quot;Member&quot;) || ISPICKVAL( Day_2_Role__c, &quot;Invited Member&quot;) || ISPICKVAL( Dinner_Role__c , &quot;Member&quot;) || ISPICKVAL( Dinner_Role__c, &quot;Invited Member&quot;)), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attended - NGL Revenue Recognition</label>
    <type>Checkbox</type>
</CustomField>