force-app/main/default/objects/Event_Members__c/fields/Attendee_Role_SSA__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Role_SSA__c</fullName>
    <label>Attendee Role (SSA)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Guest</fullName>
                <default>true</default>
                <label>Guest</label>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Speaker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>