force-app/main/default/objects/Event_Members__c/fields/Attendee_Type__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Type__c</fullName>
    <formula>IF( ISPICKVAL( Contact__r.G100_Status__c , &quot;Member: Stakeholder&quot;) , &quot;G100 Member&quot;,  
IF( ISPICKVAL( Contact__r.G100_Status__c , &quot;Prospect (Current Opp)&quot;) , &quot;G100 Prospect&quot;, 
IF( ISPICKVAL(  Contact__r.TC_Status__c , &quot;Member: Stakeholder&quot;) , &quot;TC Member&quot;, 
IF( ISPICKVAL(  Contact__r.TC_Status__c , &quot;Prospect (Current Opp)&quot;) , &quot;TC Prospect&quot;, 
IF( ISPICKVAL(  Contact__r.G100_Status__c , &quot;Network Advisor&quot;) , &quot;G100 Member&quot;, 
IF( ISPICKVAL(  Contact__r.G100_Status__c , &quot;Member: Emerging&quot;) , &quot;G100 Member&quot;, 
IF( ISPICKVAL(  Contact__r.G100_Status__c , &quot;Member: Stakeholder (On Hold)&quot;) , &quot;G100 Member&quot;, 
IF( ISPICKVAL(  Contact__r.G100_Status__c , &quot;Advisor&quot;) , &quot;G100 Member&quot;, &quot;Other&quot;))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee Type</label>
    <type>Text</type>
</CustomField>