force-app/main/default/objects/Event_Members__c/fields/Attending_As_NGL_Only__c.field-meta.xml
<CustomField>
    <fullName>Attending_As_NGL_Only__c</fullName>
    <inlineHelpText>This field is now also used for Vanguard Forum (New and Graduating only)</inlineHelpText>
    <label>Attending As (NGL Only)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Returning</fullName>
            </value>
            <value>
                <fullName>Graduating</fullName>
            </value>
            <value>
                <fullName>Advisor</fullName>
            </value>
            <value>
                <fullName>Non-Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>