force-app/main/default/objects/Event_Members__c/fields/Badge_Name__c.field-meta.xml
<CustomField>
    <fullName>Badge_Name__c</fullName>
    <label>Badge Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>