force-app/main/default/objects/Event_Members__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <description>The reason a member is not attending a meeting</description>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Reason Given</fullName>
            </value>
            <value>
                <fullName>Personal Conflicts</fullName>
            </value>
            <value>
                <fullName>Schedule conflict - Other Development Meeting</fullName>
            </value>
            <value>
                <fullName>Schedule conflicts – Business</fullName>
            </value>
            <value>
                <fullName>Schedule conflicts – Business (Board)</fullName>
            </value>
            <value>
                <fullName>Schedule conflicts – Business (Customer/Vendor)</fullName>
            </value>
            <value>
                <fullName>Weather</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>