force-app/main/default/objects/Event_Members__c/fields/Day_2_Role_TC__c.field-meta.xml
<CustomField>
    <fullName>Day_2_Role_TC__c</fullName>
    <description>Use this field for G100/TC Joint Sessions -- ONLY use this field for TC attendees, NOT G100 attendees.</description>
    <inlineHelpText>Use this field for G100/TC Joint Sessions -- ONLY use this field for TC attendees, NOT G100 attendees.</inlineHelpText>
    <label>Day 2 Role - TC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Invited Member</fullName>
            </value>
            <value>
                <fullName>Invited Advisor</fullName>
            </value>
            <value>
                <fullName>Invited Prospect</fullName>
            </value>
            <value>
                <fullName>Invited Speaker</fullName>
            </value>
            <value>
                <fullName>Invited Guest</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>Advisor</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Speaker</fullName>
            </value>
            <value>
                <fullName>Guest</fullName>
            </value>
            <value>
                <fullName>Session Chair</fullName>
            </value>
            <value>
                <fullName>Not Attending</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>Not Invited</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>