force-app/main/default/objects/Event_Members__c/fields/Day_3_Role__c.field-meta.xml
<CustomField>
    <fullName>Day_3_Role__c</fullName>
    <description>Role of the attendee on day three (applies to Women&apos;s Leadership Acceleration)</description>
    <label>Day 3 Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invited Member</fullName>
            </value>
            <value>
                <fullName>Invited Advisor</fullName>
            </value>
            <value>
                <fullName>Invited Prospect</fullName>
            </value>
            <value>
                <fullName>Invited Speaker</fullName>
            </value>
            <value>
                <fullName>Invited Guest</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>Advisor</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Speaker</fullName>
            </value>
            <value>
                <fullName>Guest</fullName>
            </value>
            <value>
                <fullName>Session Chair</fullName>
            </value>
            <value>
                <fullName>Not Attending</fullName>
            </value>
            <value>
                <fullName>CHRO - Not Attending</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>