force-app/main/default/objects/Event_Members__c/fields/Dinner_2_Role__c.field-meta.xml
<CustomField>
    <fullName>Dinner_2_Role__c</fullName>
    <description>Applies to WLA</description>
    <inlineHelpText>Use to indicate if the contact will be attending dinner on Day 2</inlineHelpText>
    <label>Dinner 2 Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invited Member</fullName>
            </value>
            <value>
                <fullName>Invited Advisor</fullName>
            </value>
            <value>
                <fullName>Invited Prospect</fullName>
            </value>
            <value>
                <fullName>Invited Speaker</fullName>
            </value>
            <value>
                <fullName>Invited Guest</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Advisor</fullName>
            </value>
            <value>
                <fullName>Speaker</fullName>
            </value>
            <value>
                <fullName>Guest</fullName>
            </value>
            <value>
                <fullName>Session Chair</fullName>
            </value>
            <value>
                <fullName>Not Attending</fullName>
            </value>
            <value>
                <fullName>CHRO - Not Attending</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>Not Invited</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Tentative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>