force-app/main/default/objects/Event_Members__c/fields/Duplicate__c.field-meta.xml
<CustomField>
    <fullName>Duplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicate - S15</label>
    <type>Checkbox</type>
</CustomField>