force-app/main/default/objects/Event_Members__c/fields/G100N_Status__c.field-meta.xml
<CustomField>
    <fullName>G100N_Status__c</fullName>
    <formula>Contact__r.G100_Rel_Type__c</formula>
    <label>G100N Status</label>
    <type>Text</type>
</CustomField>