force-app/main/default/objects/Event_Members__c/fields/Guest_of__c.field-meta.xml
<CustomField>
    <fullName>Guest_of__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who is the attendee a guest of?</description>
    <inlineHelpText>Who is the attendee a guest of?</inlineHelpText>
    <label>Guest of</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Event Attendees (Guest of)</relationshipLabel>
    <relationshipName>Event_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>