force-app/main/default/objects/Event_Members__c/fields/Membership_Since__c.field-meta.xml
<CustomField>
    <fullName>Membership_Since__c</fullName>
    <formula>Contact__r.Member_Since__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Membership Since</label>
    <type>Date</type>
</CustomField>