force-app/main/default/objects/Event_Members__c/fields/Optional_Morning_Session_TC__c.field-meta.xml
<CustomField>
    <fullName>Optional_Morning_Session_TC__c</fullName>
    <label>Optional Morning Session (TC)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Invited Member</fullName>
            </value>
            <value>
                <fullName>Invited Advisor</fullName>
            </value>
            <value>
                <fullName>Invited Speaker</fullName>
            </value>
            <value>
                <fullName>Invited Guest</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>Advisor</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Speaker</fullName>
            </value>
            <value>
                <fullName>Guest</fullName>
            </value>
            <value>
                <fullName>Not Attending</fullName>
            </value>
            <value>
                <fullName>CHRO - Not Attending</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>Not Invited</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>