force-app/main/default/objects/Event_Members__c/fields/R_G_Notes__c.field-meta.xml
<CustomField>
    <fullName>R_G_Notes__c</fullName>
    <description>Notes for G100 Network Retention and growth team - used to prep relationship leads before a meeting</description>
    <label>R&amp;G Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>