force-app/main/default/objects/Event_Members__c/fields/RSVP_Comments__c.field-meta.xml
<CustomField>
    <fullName>RSVP_Comments__c</fullName>
    <label>RSVP Comments</label>
    <type>TextArea</type>
</CustomField>