force-app/main/default/objects/Event_Members__c/fields/RSVP_Submitted_Email__c.field-meta.xml
<CustomField>
    <fullName>RSVP_Submitted_Email__c</fullName>
    <description>Email address submitted when Member/Prospect RSVPs through the website and the email used is different than the contact email address</description>
    <inlineHelpText>Email submitted with online RSVP</inlineHelpText>
    <label>RSVP Submitted Email</label>
    <type>Email</type>
</CustomField>