force-app/main/default/objects/Event_Members__c/fields/RSVP_Submitted_Email_Event__c.field-meta.xml
<CustomField>
    <fullName>RSVP_Submitted_Email_Event__c</fullName>
    <description>This is the email a G100 Network website users submits with their RSVP through the site - this is where they would like all confirmation emails to be sent</description>
    <label>RSVP Submitted Email</label>
    <type>Email</type>
</CustomField>