force-app/main/default/objects/Event_Members__c/fields/SSA_Status__c.field-meta.xml
<CustomField>
    <fullName>SSA_Status__c</fullName>
    <formula>TEXT(Contact__r.SSA_Co_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SSA Status</label>
    <type>Text</type>
</CustomField>