force-app/main/default/objects/Event_Members__c/fields/Website_Selection__c.field-meta.xml
<CustomField>
    <fullName>Website_Selection__c</fullName>
    <description>Shows which G100 Network website the RSVP will sync with - important for website integration</description>
    <label>Website Selection</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>G100</fullName>
            </value>
            <value>
                <fullName>NGL/NEXT</fullName>
            </value>
            <value>
                <fullName>TC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>