force-app/main/default/objects/Event_Members__c/recordTypes/G100_Network_Attendee.recordType-meta.xml
<RecordType>
    <fullName>G100_Network_Attendee</fullName>
    <active>true</active>
    <label>G100 Network Attendee</label>
</RecordType>