force-app/main/default/objects/Event_Members__c/recordTypes/General_Attendee.recordType-meta.xml
<RecordType>
    <fullName>General_Attendee</fullName>
    <active>true</active>
    <label>General Attendee</label>
</RecordType>