force-app/main/default/objects/Event_Members__c/listViews/G100EU_London_Spring_2012.listView-meta.xml
<ListView>
    <fullName>G100EU_London_Spring_2012</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event__c</field>
        <operation>equals</operation>
        <value>G100EU - London - Spring 2012</value>
    </filters>
    <label>G100EU - London - Spring 2012</label>
</ListView>